<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".FirstFragment"
            android:id="@+id/first_fragment">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_first_text" android:id="@+id/textViewFragmentFirst"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>

    <Button
            android:text="@string/btnStartSecondFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnStartSecondFragment" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewFragmentFirst" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/fragment_first_text_transition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/first_fragment_text_transition" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewFragmentFirst" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>