<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="model" type="com.example.gl_crash_course.citypicker.viewmodel.CityViewModel"/>
    </data>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".citypicker.view.CityFragment" android:orientation="vertical"
            android:weightSum="100">

        <com.google.android.material.card.MaterialCardView
                android:layout_height="match_parent" android:layout_width="match_parent" android:layout_weight="32"
                app:strokeColor="@color/colorAccent"
                app:strokeWidth="2dp"
                app:cardUseCompatPadding="true">
            <ListView
                    android:id="@+id/listView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true">
            </ListView>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
                android:layout_height="match_parent" android:layout_width="match_parent" android:layout_weight="30"
                app:strokeColor="@color/colorAccent"
                app:strokeWidth="2dp"
                app:cardUseCompatPadding="true">

            <LinearLayout android:layout_height="match_parent"
                          android:layout_width="match_parent" android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/type_search_city">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@={model.searchedText}"/>

                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/fragment_picker_padding_buttons">
                    <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/btnSearch"
                            android:onClick="@{() -> model.onShowData()}"
                            android:text="@string/btn_search_text"
                            android:layout_marginRight="@dimen/fragment_picker_padding_buttons"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/fragment_picker_padding_buttons">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/city_picker_header_tv_padding"
                            android:text="@string/result"/>
                    <TextView
                            android:id="@+id/tvResult"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/city_picker_header_tv_padding"
                            android:textSize="@dimen/card_view_text_size"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/fragment_picker_padding_buttons">
                    <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/btnAdd"
                            android:onClick="@{() -> model.onAddData()}"
                            android:text="@string/btn_text_add"/>
                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
                android:layout_height="match_parent" android:layout_width="match_parent" android:layout_weight="38"
                app:strokeColor="@color/colorAccent"
                app:strokeWidth="2dp"
                app:cardUseCompatPadding="true">
            <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                          android:orientation="vertical">
                <TextView
                        android:paddingLeft="@dimen/city_picker_header_tv_padding"
                        android:paddingTop="@dimen/city_picker_header_tv_padding"
                        android:text="@string/last_search"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <ListView
                        android:id="@+id/listSearchHistoryView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true">
                </ListView>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</layout>